2023-12-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3685.c:
	  Fix bug #3685.

2023-12-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/pic16/libc/Makefile.am,
	  device/lib/pic16/libc/Makefile.in,
	  device/include/pic16/setjmp.h,
	  device/lib/pic16/libc/stdlib/setjmp.c:
	  setjmp for pic16, patch by Jonathon Hall.

2023-12-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* sim/ucsim/pdk.src/inst.cc:
	  Fix simulation of z flag for not and neg.
	* src/pdk/gen.c:
	  pdk code generation improvements.
	* src/z80/gen.c:
	  Fix a Rabbit multiplication code generation bug.

2023-12-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/pdk/gen.c:
	  Fix a popP bug.

2023-12-07 Gabriele Gorla <gorlik@yahoo.com>

  	* device/lib/mos6502/memcpy.s,
  	  device/lib/mos6502/_memcmp.s,
  	  device/lib/mos6502/_setjmp.s,
  	  device/lib/mos6502/Makefile.in
  	  optimize memcpy, memcmp amd setjump implemetations
  	
2023-12-06 Gabriele Gorla <gorlik@yahoo.com>

  	* device/lib/mos6502/_muluchar.s,
  	  device/lib/mos6502/_mulschar.s
  	  use ZP instead of absolute address
   	* device/lib/mos6502/_strcpy.s,
  	  device/lib/mos6502/_strcmp.s
  	  use DPTR instead of temp
   	* device/lib/mos6502/_strlen.s
	  implement strlen in asm
   	* device/lib/mos6502/_memset.s,
   	  device/lib/mos6502/crt0.s
   	  implement memset in asm
   	* device/lib/mos6502/abs.s,
   	  device/lib/mos6502/abs.c
   	  rename abs.c to abs.s
   	* doc/sdccman.lyx
   	  add mos6502 port documentation to SDCC manual
   	  
2023-12-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/include/pic16/pic16devices.txt,
	  device/lib/pic16/startup/crt0iz.c,
	  src/pic16/glue.c,
	  support/regression/ports/pic16/spec.mk:
	  pic16 memory zeroing fixes, patch by Jonathon Hall.

2023-12-04 Gabriele Gorla <gorlik@yahoo.com>

  	* device/lib/mos6502/_setjump.c,
  	  device/lib/mos65c02/_setjump.c,